--- a/training.ipynb
+++ b/training.ipynb
@@ -112,48 +112,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {
-    "colab": {},
-    "colab_type": "code",
-    "id": "PZinAVLvXzAH"
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {
-    "colab": {},
-    "colab_type": "code",
-    "id": "DKTyxNzhXzAK"
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {
-    "colab": {},
-    "colab_type": "code",
-    "id": "If0wv-nuXzAM"
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {
-    "colab": {},
-    "colab_type": "code",
-    "id": "UzifrFUjXzAP"
-   },
-   "outputs": [],
-   "source": []
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Create dataset"
+   ]
   },
   {
    "cell_type": "code",
@@ -175,20 +138,16 @@
     "    RandomCrop(224),\n",
     "    Normalize(),\n",
     "    ToTensor()\n",
-    "])"
+    "])\n",
+    "\n",
+    "train_set = FacialKeypointsDataset(csv_file=csv_file, root_dir=root_dir, transform=transform)"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {
-    "colab": {},
-    "colab_type": "code",
-    "id": "qIJ11YsxXzAW"
-   },
-   "outputs": [],
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "train_set = FacialKeypointsDataset(csv_file=csv_file, root_dir=root_dir, transform=transform)"
+    "#### Prepare Validation set and Load "
    ]
   },
   {
