--- a/training.ipynb
+++ b/training.ipynb
@@ -147,7 +147,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Prepare Validation set and Load "
+    "#### Prepare Validation set and Load data"
    ]
   },
   {
@@ -179,19 +179,9 @@
     "\n",
     "\n",
     "valid_size = 0.3\n",
-    "train_sampler, valid_sampler = train_valid_split(train_set, valid_size)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {
-    "colab": {},
-    "colab_type": "code",
-    "id": "GI_HOQxjXzAd"
-   },
-   "outputs": [],
-   "source": [
+    "train_sampler, valid_sampler = train_valid_split(train_set, valid_size)\n",
+    "\n",
+    "\n",
     "train_loader = DataLoader(train_set, batch_size=batch_size, sampler=train_sampler,\n",
     "                          num_workers=num_workers)\n",
     "\n",
@@ -291,51 +281,7 @@
    },
    "outputs": [],
    "source": [
-    "class Net(nn.Module):\n",
-    "\n",
-    "    def __init__(self):\n",
-    "        super(Net, self).__init__()\n",
-    "        \n",
-    "        self.pool = nn.MaxPool2d(2, 2) #(window size, stride)\n",
-    "                \n",
-    "        self.conv1 = nn.Conv2d(in_channels=1, out_channels=32, kernel_size=4) #224, 32\n",
-    "        \n",
-    "        self.conv2 = nn.Conv2d(32, 64, 3) #112, 64\n",
-    "        \n",
-    "        self.conv3 = nn.Conv2d(64, 128, 2) #56, 128\n",
-    "        \n",
-    "        self.conv4 = nn.Conv2d(128, 256, 1) #28, 256\n",
-    "        \n",
-    "        self.fc1 = nn.Linear(43264, 1000)   #36864\n",
-    "        self.fc2 = nn.Linear(1000, 1000)\n",
-    "        self.fc3 = nn.Linear(1000, 136)\n",
-    "        \n",
-    "        self.drop1 = nn.Dropout(p = 0.1)\n",
-    "        self.drop2 = nn.Dropout(p = 0.2)\n",
-    "        self.drop3 = nn.Dropout(p = 0.3)\n",
-    "        self.drop4 = nn.Dropout(p = 0.4)\n",
-    "        self.drop5 = nn.Dropout(p = 0.5)\n",
-    "        self.drop6 = nn.Dropout(p = 0.6)\n",
-    "        \n",
-    "        \n",
-    "\n",
-    "        \n",
-    "    def forward(self, x):\n",
-    "      \n",
-    "      \n",
-    "        x = self.drop1(self.pool(F.relu(self.conv1(x))))\n",
-    "        x = self.drop2(self.pool(F.relu(self.conv2(x))))\n",
-    "        x = self.drop3(self.pool(F.relu(self.conv3(x))))\n",
-    "        x = self.drop4(self.pool(F.relu(self.conv4(x))))\n",
-    "        \n",
-    "        x = x.view(x.size(0), -1)\n",
-    "        \n",
-    "        x = self.drop5(F.relu(self.fc1(x)))\n",
-    "        x = self.drop6(F.relu(self.fc2(x)))\n",
-    "        \n",
-    "        x = self.fc3(x)\n",
-    "        \n",
-    "        return x\n"
+    "\n"
    ]
   },
   {
