--- a/training.ipynb
+++ b/training.ipynb
@@ -108,7 +108,11 @@
     "from torch.utils.data import Dataset, DataLoader\n",
     "from torch.utils.data.sampler import SubsetRandomSampler\n",
     "from torchvision import datasets, models\n",
-    "import torch.optim as optim"
+    "import torch.optim as optim\n",
+    "\n",
+    "from network import Net\n",
+    "from transformation import *\n",
+    "from custom_dataset import FacialKeypointsDataset"
    ]
   },
   {
